crates/plotnik-lib/tests/06-vm/anchors_trailing/nested_strict_anchor_rejects_when_outer_not_last.txt
Q = (program
  (expression_statement
    (array
      (array
        (number) @n
        .!
      )
      .!
    )
  )
)
--------------------- INPUT ----------------------
[[1], x]
------------------ DIAGNOSTICS -------------------
error: with strict adjacency (`.!`), the last child of `array` must be `number`, but `array` ends with `"]"`
 --> query.ptk:4:8
  |
4 |       (array
  |        ^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(array
              (number) @n
              .
            )`
